# nexcore-pvos

./: CLAUDE.md  Cargo.toml  README.md
src/: aggregator.rs  alerting.rs  arithmetic.rs  atomic.rs  auth.rs  backpressure.rs  backup.rs  bridges.rs  builtins.rs  bus.rs  calibrator.rs  collector.rs  command.rs  completion.rs  crossing.rs  crud.rs  dashboard.rs  defaults.rs  dependency.rs  discovery.rs  drift.rs  driver.rs  ensemble.rs  enumeration.rs  event.rs  executor.rs  exploratory.rs  feedback.rs  frequency.rs  fsm_history.rs  fsm_snapshot.rs  fsm_transition.rs  gaps.rs  gateway.rs  isolation.rs  kernel.rs  lib.rs  lifecycle.rs  location.rs  metric.rs  (+35 more)
src/proof/: conservation.rs  mod.rs
src/typestate/: case_lifecycle.rs  mod.rs  signal_lifecycle.rs  submission_lifecycle.rs  workflow_lifecycle.rs
